# psychometric-assessment-app

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy-preview.yml
backend/: .dockerignore  Dockerfile  README.md  lambda_function.py  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/services/: ai_insights.py  interpretation.py  scoring.py
backend/tests/api/: test_assessment_route.py
backend/tests/services/: test_interpretation.py  test_scoring.py
frontend/: Dockerfile  next-env.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx  providers.tsx
frontend/app/assessment/: page.tsx
frontend/app/results/: page.tsx
frontend/components/assessment/: assessment-flow.tsx  likert-scale.tsx  progress-indicator.tsx  question-card.tsx
frontend/components/charts/: radar-chart-card.tsx
frontend/components/results/: assessment-summary.tsx  results-view.tsx  trait-card.tsx
frontend/components/shared/: assessment-session.tsx  page-shell.tsx  start-assessment-button.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  separator.tsx  skeleton.tsx
frontend/hooks/: use-assessment-session.ts
frontend/lib/: api.ts  questions.ts  scoring.ts  types.ts
