[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychometric-assessment-backend"
version = "0.1.0"
description = "Backend for a Big Five psychometric assessment"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "mangum>=0.17",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "openai>=1.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
